--- a/src/componets/accounts/css/portadaUsuario.css
+++ b/src/componets/accounts/css/portadaUsuario.css
@@ -75,6 +75,7 @@
   height: inherit;
   display: flex;
   justify-content: center;
+  position: relative;
 }
 
 .background-content-responsive-imagen {
