--- a/src/componets/index/style.css
+++ b/src/componets/index/style.css
@@ -57,19 +57,10 @@ header{
 
 .flexPassword{
     display: flex;
+    position: relative;
     width: 100%;
     align-items: center;
     justify-content: center;
-}
-.eye{
-    position:absolute;
-    right:16px;
-    object-fit: cover;
-    flex-basis: 20px;
-    height: 20px;
-}
-.eye:hover{
-    background-color: #fff6;   
 }
 .aspect{
     width:100%;
@@ -113,6 +104,7 @@ header{
     align-items: center;
 }
 .full{
+    width: 65%;
     display: flex;
     margin: 0 4% 0 4%;
     justify-content: center;
@@ -211,7 +203,11 @@ a{
     justify-content: center;
     align-content: center;
 }
-
+.footer{
+    margin: 6px 0;
+    display: flex;
+    justify-content: space-around;
+}
 
 .text{
     width: 87%;
@@ -256,6 +252,7 @@ height:19px;
         margin: 20px 10px 0 10px;
     }
     .full{
+        width: 100%;
         margin: 0;
     }
     .stuffed{
@@ -277,6 +274,7 @@ height:19px;
         margin: 20px 10px 0 10px;
     }
     .full{
+        width: 100%;
         margin: 0;
     }
     .stuffed{
@@ -289,6 +287,7 @@ height:19px;
 @media screen and (min-width:700px) and (max-width:900px){
     
     .full{
+        width: 80%;
         margin: 0 2% 0 2%;
     }
     .stuffed{
