--- a/styles/principalPage/header.module.css
+++ b/styles/principalPage/header.module.css
@@ -1,3 +1,6 @@
+.mar {
+    height: 54px;
+}
 .header {
     top: 0;
     left: 0;
@@ -8,7 +11,8 @@
 }
 .nav {
     width: 100%;
-    background: linear-gradient(180deg, var(--red_a), transparent);
+    background-image:
+     linear-gradient(to top, var(--red_b), var(--red_c));
     display: flex;
     justify-content: flex-end;
 }
@@ -27,7 +31,7 @@
     right: 0;
     width: 38%;
     font-size: 20px;
-    background-color: var(--red_a);
+    background-color: var(--black_e);
     display: flex;
     flex-direction: column;
     align-items: center;
