--- a/styles/principalPage/full.module.css
+++ b/styles/principalPage/full.module.css
@@ -4,6 +4,16 @@
     flex-direction: column;
     justify-content: center;
     position: relative;
+    /* --black_a : var(--black_a) */
+}
+.full::before {
+    content: "";
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+    height: 30%;
+    background-image: linear-gradient(to top, var(--black_c),transparent);
+    z-index: 50;
 }
 .button_register__container{
     position: absolute;
