--- a/styles/principalPage/header.module.css
+++ b/styles/principalPage/header.module.css
@@ -12,7 +12,8 @@
 .nav {
     width: 100%;
     background-image:
-     linear-gradient(166deg, var(--black_c)  70%, var(--red_e));
+     linear-gradient(166deg, var(--black_c)  75%,
+     var(--red_e));
     display: flex;
     justify-content: flex-end;
 }
@@ -32,6 +33,7 @@
     width: 38%;
     font-size: 20px;
     background-color: var(--black_e);
+    min-width: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -39,31 +41,4 @@
     padding: 12px;
     border: 1px none var(--red_d);
     border-style: none none solid solid;
-}
-.window_session__input {
-    border: none;
-    border-bottom: 2px solid var(--red_e);
-    background-color: transparent;
-}
-.window_session__input_password {
-    position: relative;
-    display: flex;
-    
-}
-.window_session__see {
-    right: 0;
-    position: absolute;
-}
-.window_session__see:hover {
-    height: 100%;
-    background-color: var(--black_opacity);
-    border-radius: 12px;
-}
-.window_session__button_send {
-    margin-top: 8px;
-    border-radius: 5px;
-    color: var(--color);
-    font-family: IrishGrover-Regular;
-    border: 2px solid var(--red_d) ;
-    background-color: var(--red_b);
 }
