--- a/styles/componets/posts/posts.module.css
+++ b/styles/componets/posts/posts.module.css
@@ -1,11 +1,12 @@
 .more_images__img {
-    display: none;
+    width: 95%;
 }
 .more_images{
     display: flex;
     justify-content: center;
 }
 .more_images__window{
+    width: 100%;
     padding: 12px;
     display: flex;
     flex-direction: column;
@@ -13,7 +14,28 @@
     text-align: center;
     background-color: var(--black_e);
 }
-
+.more_image__load_imge{
+    margin-top: 12px;
+    padding: 17px;
+    /* background-color: var(--red_b); */
+    border: 4px none var(--red_b);
+    border-style: dashed solid;
+}
+.more_images__button {
+    padding: 4px;
+    background-color: var(--black_c);
+}
+.more_images__button:hover {
+    background-color: var(--black_b);
+    color: var(--black_c);
+} 
+.more_images__guie_inputs{
+    border-bottom: 1px solid red ;
+}
+.more_images__description{
+    background-color: transparent;
+    margin-bottom: 6px;
+}
 
 @media screen and (min-width: 700px){
     .more_images__window{
