--- a/styles/componets/posts/posts.module.css
+++ b/styles/componets/posts/posts.module.css
@@ -37,8 +37,13 @@
     margin-bottom: 6px;
 }
 
+
 @media screen and (min-width: 700px){
     .more_images__window{
+        width: 80%;
+    }
+    
+    .posts__Container {
         width: 80%;
     }
 }
