--- a/styles/componets/posts/posts.module.css
+++ b/styles/componets/posts/posts.module.css
@@ -36,6 +36,16 @@
     background-color: transparent;
     margin-bottom: 6px;
 }
+.postContainer{
+    margin-top: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.doneContainer {
+    display: flex;
+    justify-content: center;
+}
 
 
 @media screen and (min-width: 700px){
