add style on post elemet

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,6 +36,7 @@ body {
   position: relative;
 }
 * {
+  box-sizing: border-box;
   font-size: 24px;
   font-family: IrishGrover-Regular;
   color: var(--color);
