--- a/styles/componets/posts/post_component.module.css
+++ b/styles/componets/posts/post_component.module.css
@@ -2,20 +2,39 @@
 .posts__Container {
     width: 100%;
     display: flex;
-    position: relative;
-    flex-direction: column;
-    background-color: var(--black_c);
     padding: 12px;
+    justify-content: center;
+    position: relative;
 }
 .posts__Container::before {
     content: "";
-    height: 12px;
-    width: 100%;
-    
     position: absolute;
-    right: 0;
     top: 0;
-    background: var(--black_d);
+    width: 100%;
+    height: 100%;
+    background-color: var(--shadow);
+    clip-path: polygon(0 4%, 95% 0, 98% 96%, 8% 100%);
+}
+
+.posts__body {
+    width: 100%;
+    height: 500px;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    background-color: var(--black_c);
+    padding: calc(( -1vw / 1.8) + 40px) calc(( -1vw / 1.8) + 60px);
+    clip-path: polygon(0 4%, 95% 0, 98% 96%, 8% 100%);
+
+}
+
+.posts_image {
+    position: relative;
+    flex: 1
+}
+.posts__date {
+    text-align: end;
+    color: var(--black_a);
 }
 
 @media screen and (min-width: 700px){
