--- a/styles/componets/posts/addMorePosts.module.css
+++ b/styles/componets/posts/addMorePosts.module.css
@@ -6,6 +6,7 @@
     justify-content: center;
 }
 .more_images__window{
+    gap: 12px;
     margin-top: 12px;
     width: 100%;
     padding: 12px;
@@ -16,9 +17,7 @@
     background-color: var(--black_e);
 }
 .more_image__load_imge{
-    margin-top: 12px;
     padding: 17px;
-    /* background-color: var(--red_b); */
     border: 4px none var(--red_b);
     border-style: dashed solid;
 }
@@ -34,6 +33,7 @@
     border-bottom: 1px solid red ;
 }
 .more_images__description{
+    text-align: center;
     background-color: transparent;
     margin-bottom: 6px;
 }
@@ -52,8 +52,7 @@
 @media screen and (min-width: 700px){
     .more_images__window{
         width: 80%;
-    }
-    
+    }   
     .posts__Container {
 
         width: 80%;
