--- a/styles/principalPage/header.module.css
+++ b/styles/principalPage/header.module.css
@@ -56,6 +56,7 @@
     border-style: none none solid solid;
 }
 .window_button_option {
+    cursor: pointer;
     padding: 0 12px 0 12px;
     border-radius: 0 0 16px 16px;
     background-image: linear-gradient(to top, var(--red_a) 20%, transparent 40%);
