--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,6 @@ a:hover{
   color: var(--color_hover);
 }
 body {
-  padding: 20px 20px 60px;
   margin: 0;
   padding: 0;
   background-color: var(--red_a);
@@ -50,7 +49,7 @@ input[type=text], input[type=password]{
 }
 
 @media screen and (min-width:900px) {
-  body {
+  .body-responsive {
     padding: 0 4%;
   } 
   * {
@@ -58,7 +57,7 @@ input[type=text], input[type=password]{
   }
 }
 @media screen and (min-width:1200px) {
-  body {
+  .body-responsive {
     padding: 0 4%;
   } 
   * {
