--- a/styles/componets/posts/post_component.module.css
+++ b/styles/componets/posts/post_component.module.css
@@ -52,14 +52,22 @@
 }
 
 .clip_path1 {
-    clip-path: polygon(0 4%, 95% 0, 98% 96%, 8% 100%);
+    /* --polygon: polygon(0 4vmax, 95vmax 0, 98vmax 96vmax, 8vmax 100%); */
+    --polygon: polygon(0 4%, 95% 0, 98% 96%, 8% 100);
 }
 
 .clip_path2 {
-    clip-path: polygon(6% 5%, 98% 2%, 94% 96%, 4% 100%);
+    /* --polygon: polygon(6vmax 5vmax, 98vmax 2vmax, 94vmax 96vmax, 4vmax 100%); */
+    --polygon: polygon(6% 5%, 98% 2%, 94% 96%, 4% 100%);
 }
 .clip_path3 {
-    clip-path: polygon(2% 6%, 96% 1%, 95% 96%, 8% 98%);
+    --polygon: polygon(2vmax 6vmax, 96% 2vmax, 95% 96%, 7% 98%);
+    /* --polygon: polygon(2% 6%, 96% 1%, 95% 96%, 8% 98%); */
+}
+
+.clip_path4 {
+    --polygon: polygon(2% 6%, 96% 1%, 95% 96%, 8% 98%);
+    /* --polygon: polygon(2vmax 6vmax, 96vmax 1vmax, 95vmax 96vmax, 8vmax 98vmax); */
 }
 
 
@@ -70,24 +78,27 @@
     width: 100%;
     height: 100%;
     background-color: var(--shadow);
-    /* clip-path: polygon(0 4%, 95% 0, 98% 96%, 8% 100%); */
+    clip-path: var(--polygon);
 }
 
 .posts__body {
     width: 100%;
-    height: 500px;
+    min-height: 500px;
     display: flex;
     position: relative;
     flex-direction: column;
     background-color: var(--black_c);
-    padding: calc(( -1vw / 1.8) + 40px) calc(( -1vw / 1.8) + 60px);
-    /* clip-path: polygon(0 4%, 95% 0, 98% 96%, 8% 100%); */
-
+    padding: calc(( -1vw / 0.8) + 40px) calc(( -1vw / 1.8) + 60px);
+    clip-path: var(--polygon);
+    
 }
 
 .posts_image {
     position: relative;
-    flex: 1
+    flex: 1; 
+    min-height: 200px;
+    margin-bottom: calc( 1% + 12px);
+
 }
 .posts__date {
     text-align: end;
