--- a/styles/componets/posts/post_component.module.css
+++ b/styles/componets/posts/post_component.module.css
@@ -1,48 +1,3 @@
-/* 
-.posts__Container {
-    width: 100%;
-    display: flex;
-    padding: 12px;
-    justify-content: center;
-    position: relative;
-}
-.posts__Container::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: var(--shadow);
-    clip-path: polygon(0 4%, 95% 0, 98% 96%, 8% 100%);
-}
-
-.posts__body {
-    width: 100%;
-    height: 500px;
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    background-color: var(--black_c);
-    padding: calc(( -1vw / 1.8) + 40px) calc(( -1vw / 1.8) + 60px);
-    clip-path: polygon(0 4%, 95% 0, 98% 96%, 8% 100%);
-
-}
-
-.posts_image {
-    position: relative;
-    flex: 1
-}
-.posts__date {
-    text-align: end;
-    color: var(--black_a);
-}
-
-@media screen and (min-width: 700px){
-    .posts__Container {
-        width: 80%;
-    }
-} 
-*/
 .posts__Container {
     width: 100%;
     display: flex;
@@ -53,9 +8,8 @@
 
 .clip_path1 {
     /* --polygon: polygon(0 4vmax, 95vmax 0, 98vmax 96vmax, 8vmax 100%); */
-    --polygon: polygon(0 4%, 95% 0, 98% 96%, 8% 100);
+    --polygon: polygon(0 4%, 95% 0, 98% 96%, 8% 100%);
 }
-
 .clip_path2 {
     /* --polygon: polygon(6vmax 5vmax, 98vmax 2vmax, 94vmax 96vmax, 4vmax 100%); */
     --polygon: polygon(6% 5%, 98% 2%, 94% 96%, 4% 100%);
@@ -64,7 +18,6 @@
     --polygon: polygon(2vmax 6vmax, 96% 2vmax, 95% 96%, 7% 98%);
     /* --polygon: polygon(2% 6%, 96% 1%, 95% 96%, 8% 98%); */
 }
-
 .clip_path4 {
     --polygon: polygon(2% 6%, 96% 1%, 95% 96%, 8% 98%);
     /* --polygon: polygon(2vmax 6vmax, 96vmax 1vmax, 95vmax 96vmax, 8vmax 98vmax); */
@@ -79,6 +32,22 @@
     height: 100%;
     background-color: var(--shadow);
     clip-path: var(--polygon);
+}
+.posts_comunity_container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.posts_comunity_section {
+    padding: 6px 20px;
+    border-radius: 18px;
+    background-color: var(--black_e);
+    cursor: pointer;
+    user-select: none;
+}
+
+.posts_comunity_section:hover {
+    background-color: var(--black_d);
 }
 
 .posts__body {
